--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-datepicker": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-input-mask": "^2.0.4",
     "react-modal": "^3.16.1",
     "react-redux": "^9.2.0",
     "react-resizable": "^3.0.5",
